fixing light mode when system setting is dark mode

--- a/assets/sass/components/_dark-mode.sass
+++ b/assets/sass/components/_dark-mode.sass
@@ -93,6 +93,29 @@
                     a:hover
                         color: #5b64a0
 
+.light-mode body
+    background-color: white !important
+    color: black
+    #hero
+        .hero-group
+            .hero-title
+                .hide-light
+                    display: none
+    #portfolio
+        .portfolio-group
+            .portfolio-card
+                img
+                    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
+        .portfolio-grid
+            .portfolio-card
+                img
+                        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
+    #blog
+        .blog
+            .blog-card
+                img
+                    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
+
 .dark-mode body
     background-color: black
     color: white
